# openwrt-mini-network-manager

./: .gitignore  README.md  toolchain.cmake
project1/: CMakeLists.txt
project1/build-native/: CMakeCache.txt  Makefile  cmake_install.cmake  netmon
project1/include/: capture.h  config.h  history.h  iface_info.h  logger.h  packet_handler.h  stats_export.h
project1/src/: capture.c  config.c  history.c  iface_info.c  logger.c  main.c  packet_handler.c  stats_export.c
project1/tests/: capture_test.c  history_test.c  iface_test.c  logger_test.c
web/: server.py
web/scripts/: fw_add.sh  fw_del.sh  fw_flush.sh  fw_init.sh  fw_lib.py  fw_list.sh  fw_toggle.sh  fw_update.sh
web/ui/: .env.example  index.html  package-lock.json  package.json  vite.config.js
web/ui/src/: main.js
web/ui/src/api/: firewall.js  traffic.js
web/ui/src/components/: FlowTable.vue  RateChart.vue  StatusTable.vue
web/ui/src/composables/: useTraffic.js
web/ui/src/layouts/: AppLayout.vue
web/ui/src/router/: index.js
web/ui/src/styles/: global.css
web/ui/src/utils/: format.js
web/ui/src/views/: AboutView.vue  AlertHistoryView.vue  ConfigView.vue  FirewallView.vue  SystemLogsView.vue  SystemStatusView.vue  TrafficReportView.vue  TrafficView.vue
